5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3989/executions/1791_3134.log
== TEST (2019-05-29 14:08:19) 
-- CODE:
from numpy import*

vetor1 = array(eval(input("")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:08:46) 
-- CODE:
from numpy import*

vetor1 = array(eval(input("")))
print(vetor1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:23:12) 
-- CODE:
from numpy import*

vetor1 = array(eval(input("")))

M = (sum(vetor1)/size(vetor1)) * 1/2
print(M)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:24:29) 
-- CODE:
from numpy import*

vetor1 = array(eval(input("")))

M = ((sum(vetor1)/size(vetor1)) + ([vetor1] - 1)* 2 )* 1/2
print(M)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:25:15) 
-- CODE:
from numpy import*

vetor1 = array(eval(input("")))

M = (sum(vetor1)/size(vetor1)) + ([vetor1] - 1) * 1/2
print(M)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:25:47) 
-- CODE:
from numpy import*

vetor1 = array(eval(input("")))

M = sum(vetor1)/size(vetor1)) + ([vetor1] - 1) * 1/2
print(M)

-- ERROR:
File "XXXX", line 5
    M = sum(vetor1)/size(vetor1)) + ([vetor1] - 1) * 1/2
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:25:54) 
-- CODE:
from numpy import*

vetor1 = array(eval(input("")))

M = sum(vetor1)/size(vetor1) + ([vetor1] - 1) * 1/2
print(M)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:26:22) 
-- CODE:
from numpy import*

vetor1 = array(eval(input("")))

M = sum(vetor1)/size(vetor1) * 1/2
print(M)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:27:52) 
-- CODE:
from numpy import*

vetor1 = array(eval(input("")))

M = sum(vetor1)* 2 + [vetor1 - 1] * 2 * 1/2
print(M)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:28:22) 
-- CODE:
from numpy import*

vetor1 = array(eval(input("")))

M = sum(vetor1)* 2 + ([vetor1] - 1) * 2 * 1/2
print(M)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:28:49) 
-- CODE:
from numpy import*

vetor1 = array(eval(input("")))

M = sum(vetor1)* 2 + ((vetor1)- 1) * 2 * 1/2
print(M)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:29:20) 
-- CODE:
from numpy import*

vetor1 = array(eval(input("")))

M = sum(vetor1)* 2 + ((vetor1)- 1) * 2 * 1/2/size(vetor1)
print(M)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:30:11) 
-- CODE:
from numpy import*

vetor1 = array(eval(input("")))

M = sum(vetor1)* 2 + ((vetor1)- 1) * 2 * 0.5/size(vetor1)
print(M)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:31:18) 
-- CODE:
from numpy import*

vetor1 = array(eval(input("")))

M = sum(vetor1) * 2 + (vetor1) - 1
print(M)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:32:02) 
-- CODE:
from numpy import*

vetor1 = array(eval(input("")))

M = sum(vetor1) * 2 + (vetor1) - 1 * 0.5
print(M)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:32:26) 
-- CODE:
from numpy import*

vetor1 = array(eval(input("")))

M = sum(vetor1) * 2 + (vetor1) - 1 * 0.5/(vetor1)
print(M)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:32:44) 
-- CODE:
from numpy import*

vetor1 = array(eval(input("")))

M = sum(vetor1) * 2 + (vetor1) - 1 * 0.5/size(vetor1)
print(M)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:33:15) 
-- CODE:
from numpy import*

vetor1 = array(eval(input("")))

M = (vetor1) * 2 + (vetor1) - 1 * 0.5/size(vetor1)
print(M)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:33:29) 
-- CODE:
from numpy import*

vetor1 = array(eval(input("")))

M = (vetor1) * 2 + (vetor1) - 1 * 0.5/size(vetor1)
print(M)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:34:01) 
-- CODE:
from numpy import*

vetor1 = array(eval(input("")))

M = (vetor1) * 2 + (vetor1) - 1 * 0.5/(vetor1)
print(M)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
